@@ -51,9 +51,10 @@
 </head>
 <body>
 
-<h2>WinMerge 2.8.2 Release Notes</h2>
+<h2>WinMerge 2.8.4 Release Notes</h2>
 <ul>
   <li><a href="#about">About This Release</a></li>
+  <li><a href="#new284">What Is New in 2.8.4?</a></li>
   <li><a href="#new282">What Is New in 2.8.2?</a></li>
   <li><a href="#new280">What Is New in 2.8.0?</a></li>
   <li><a href="#new28RC">What Is New in 2.8 RC?</a></li>
@@ -82,11 +83,20 @@ new localization system.  This simplifies the translation process of WinMerge.
 Please submit bug reports to our <a href=
 "https://sourceforge.net/tracker/?group_id=13216&amp;atid=113216">bug-tracker</a>.
 
-<h3><a name="new282">What Is New in 2.8.2?</a></h3>
+<h3><a name="new284">What Is New in 2.8.4?</a></h3>
 <p>
 For a complete changelog history, see the <code><a href="ChangeLog.txt">ChangeLog.txt</a></code>
 file located in the <code>Docs</code> folder under the WinMerge program folder.
 </p>
+
+<h4>Changes</h4>
+<ul>
+  <li>Fix a crash when one path given from command line</li>
+  <li>Fix a crash when starting second instance with single-instance enabled</li>
+  <li>Brazilian translation update</li>
+</ul>
+
+<h3><a name="new282">What Is New in 2.8.2?</a></h3>
 
 <h4>Changes</h4>
 <ul>
