@@ -3,6 +3,7 @@ Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
 to Subversion revision numbers (rXXXXX).
 
 WinMerge 2.8.4
+  Release Notes update (#1995265)
   BugFix: Crash when starting a second instance (#1993835)
   BugFix: Crash when starting WinMerge with only one path (#1994402)
   Translation updates:
